@@ -4,11 +4,9 @@ package edu.colorado.phet.capacitorlab.view;
 
 import java.awt.geom.Point2D;
 
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
-
 import edu.colorado.phet.capacitorlab.CLConstants;
 import edu.colorado.phet.capacitorlab.model.BatteryCapacitorCircuit;
+import edu.colorado.phet.capacitorlab.model.BatteryCapacitorCircuit.BatteryCapacitorCirucitChangeListener;
 import edu.colorado.phet.capacitorlab.model.CLModelViewTransform3D;
 import edu.colorado.phet.capacitorlab.model.Capacitor;
 import edu.colorado.phet.common.piccolophet.PhetPNode;
@@ -40,8 +38,8 @@ public class DielectricExcessChargeNode extends PhetPNode {
         this.parentNode = new PComposite();
         addChild( parentNode );
         
-        circuit.addChangeListener( new ChangeListener() {
-            public void stateChanged( ChangeEvent event ) {
+        circuit.addBatteryCapacitorCirucitChangeListener( new BatteryCapacitorCirucitChangeListener() {
+            public void circuitChanged() {
                 if ( isVisible() ) {
                     update();
                 }
